2007-09-25 [colin]	1.98.0cvs2

	* src/vcal_folder.c
	* src/vcal_manager.c
		Fix crash on disk full

2007-09-20 [paul]	1.98.0cvs1

	* po/it.po
		updated by Andrea Spadaccini

2007-09-03 [paul]	1.98.0

	1.98 released

2007-09-16 [cleroy]	1.97.0cvs2

	* src/vcal_manager.c
	* src/vcal_meeting_gtk.c
	* src/vcalendar.c
		Allow setting domain name in msgids

2007-09-03 [colin]	1.97.0cvs1

	* po/ca.po
		Fix breakage

2007-09-03 [paul]	1.97.0

	1.97 released

2007-09-03 [paul]	1.96.0cvs9

	* po/ca.po
	* po/es.po
	* po/fi.po
	* po/hu.po
	* po/pt_BR.po
	* po/sk.po
	* po/zh_CN.po
		updated by Miquel Oliete, Ricardo Mones Lastra,
		Flammie Pirinen, Pader Rezso, Frederico Goncalves
		Guimaraes, Andrej Kacian, Ralph Young

2007-08-30 [colin]	1.96.0cvs8

	* src/vcal_folder.c
	* src/vcal_manager.c
		Fix all potential misuses of format string functions

2007-08-27 [colin]	1.96.0cvs7

	* src/plugin.c
	* src/vcal_folder.c
		Fix loss of subfolders properties when renaming folder

2007-08-16 [paul]	1.96.0cvs6

	* configure.ac
		use pkgconfig to check for gtk and glib

2007-07-31 [colin]	1.96.0cvs5

	* src/plugin.c
	* src/vcal_manager.c
	* src/vcal_meeting_gtk.c
	* src/vcalendar.c
		Fix TZ offsets; add "Create meeting from
		message" in Message menu and message list
		contextual menu

2007-07-26 [colin]	1.96.0cvs4

	* src/vcal_folder.c
		Fix thread usage on BSDs

2007-07-23 [colin]	1.96.0cvs3

	* src/plugin.c
		Fix license

2007-07-11 [colin]	1.96.0cvs2

	* COPYING
	* configure.ac
	* po/ca.po
	* po/de.po
	* po/es.po
	* po/fi.po
	* po/fr.po
	* po/hu.po
	* po/it.po
	* po/pl.po
	* po/pt_BR.po
	* po/sk.po
	* po/sr.po
	* po/zh_CN.po
	* src/gettext.h
	* src/plugin.c
	* src/vcal_folder.c
	* src/vcal_folder.h
	* src/vcal_manager.c
	* src/vcal_manager.h
	* src/vcal_meeting_gtk.c
	* src/vcal_meeting_gtk.h
	* src/vcal_prefs.c
	* src/vcal_prefs.h
	* src/vcalendar.c
	* src/vcalendar.h
		Upgrade to GPLv3 or later

2007-07-07 [paul]	1.96.0cvs1

	* po/fi.po
		updated by Flammie Pirinen
