@@ -1,3 +1,8 @@
+2007-09-25 [colin]	1.98.0cvs3
+
+	* src/vcal_folder.c
+		A few optimisations
+
 2007-09-25 [colin]	1.98.0cvs2
 
 	* src/vcal_folder.c
